--- a/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Shared/_Layout.cshtml
+++ b/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
                                                         <a class="dropdown-item" asp-action="Register" asp-controller="Account">Register</a>
                                                     </li>
                                                     <li>
-                                                        <a class="dropdown-item" asp-action="Register" asp-controller="Account">Login</a>
+                                                        <a class="dropdown-item" asp-action="Login" asp-controller="Account">Login</a>
                                                     </li>
                                                 }
                                             </ul>
