--- a/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Home/Index.cshtml
+++ b/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Home/Index.cshtml
@@ -192,7 +192,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="cart.html"
+                                                    <a data-product-id="@item.Id" class="add-basket"
                                                        data-tippy="Add to cart"
                                                        data-tippy-inertia="true"
                                                        data-tippy-animation="shift-away"
