shop search ,ancaq bir errorda partlayir

--- a/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Shared/_Layout.cshtml
+++ b/Pronia-Tekrar-1/Pronia-Tekrar-1/Views/Shared/_Layout.cshtml
@@ -1249,6 +1249,26 @@
         window.addEventListener('DOMContentLoaded', () => {
             console.log("Səhifə yükləndi!");
         });
+
+        async function FilterSearchTerm (search)
+        {
+            var response = await fetch(`/Shop/Filter?search=${search}`)
+            if (response.ok) 
+            {
+                var data = await response.text()
+                document.getElementById('filter-result').innerHTML = data
+            }
+        }
+            var form = document.querySelector('.custom-search');
+            
+            form.addEventListener("submit", async function (e) {
+                e.preventDefault();
+                var search = document.getElementById('searchValue').value
+                console.log(search)
+                await FilterSearchTerm (search);
+            })
+        
+
     </script>
 
         
